--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,4 +7,4 @@ COPY ./stx-okr-backend .
 RUN npm install
 RUN npm run build
 
-CMD [ "npm", "run", "start:prod" ]
+CMD sh -c "npx prisma migrate deploy && npm run start:prod"
