--- a/stx-okr-backend/package.json
+++ b/stx-okr-backend/package.json
@@ -26,7 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.1",
     "@noble/hashes": "^1.7.0",
-    "@prisma/client": "^6.2.0",
+    "@prisma/client": "6.2.1",
     "bitcoinjs-lib": "^6.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
